# services/server/src/main/java/com/originguard/investigation/domain/EvidenceConclusion.java
@@ -1,0 +1,7 @@
+package com.originguard.investigation.domain;
+
+public enum EvidenceConclusion {
+    LIKELY_AUTHENTIC,
+    LIKELY_SYNTHETIC,
+    INCONCLUSIVE
+}
